--- a/notebooks/2-ETL cyclisme Paris.ipynb
+++ b/notebooks/2-ETL cyclisme Paris.ipynb
@@ -15,7 +15,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests"
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "import pandas as pd\n",
+    "import re\n",
+    "import json\n",
+    "import sqlite3"
    ]
   },
   {
@@ -31,55 +36,112 @@
    "id": "c2227ef8",
    "metadata": {},
    "source": [
-    "## Extract\n",
+    "## Extract and transform\n",
     "From website [https://www.meteociel.fr/climatologie](https://www.meteociel.fr/climatologie)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c976aa68",
+   "execution_count": 2,
+   "id": "91b3e962",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Extract scrap from website\n",
-    "#https://www.meteociel.fr/climatologie/obs_villes.php?code2=75107005&mois=12&annee=2025&sn=0\n",
-    "\n",
-    "\n",
-    "# Load in SQL Lite"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "040a89bd",
-   "metadata": {},
-   "source": [
-    "## Transform"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "707c9254",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d71a6b49",
-   "metadata": {},
-   "source": [
-    "## Load"
+    "def extractTemperature(text):\n",
+    "    regex = re.compile(r'([\\d\\.]+)')\n",
+    "    if text == ' --- ':\n",
+    "        return None\n",
+    "    temperature = regex.findall(text)[0]\n",
+    "    return float(temperature)\n",
+    "    \n",
+    "def extractDate(date, month, year):\n",
+    "    regex = re.compile(r'\\d+')\n",
+    "    day = regex.findall(date)[0]\n",
+    "    date = f\"{day:0>2}-{month:0>2}-{year}\"\n",
+    "    return date"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fbfd9279",
+   "execution_count": 3,
+   "id": "6d91b17e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def scrapeMonthYear(month, year, dates, temperature_max, temperature_min):\n",
+    "    url = \"https://www.meteociel.fr/climatologie/obs_villes.php\"\n",
+    "    \n",
+    "    \n",
+    "    params = {\n",
+    "        \"code2\": 75107005,\n",
+    "        \"mois\": month,\n",
+    "        \"annee\": year,\n",
+    "    }\n",
+    "\n",
+    "    response = requests.get(url, params=params)\n",
+    "    soup = BeautifulSoup(response.content, \"html.parser\")\n",
+    "\n",
+    "    \n",
+    "    table = soup.find(\"table\", style=\"border-collapse: collapse\")\n",
+    "    try:\n",
+    "        rows = table.find_all(\"tr\")[1:-1]\n",
+    "\n",
+    "        for row in rows:\n",
+    "            date = extractDate(row.find(\"td\", bgcolor=\"#FFFFCC\").text, month, year)\n",
+    "            dates.append(date)\n",
+    "            temperature_max.append(extractTemperature(row.find(\"td\", bgcolor=\"#FFDDDD\").text))\n",
+    "            temperature_min.append(extractTemperature(row.find(\"td\", bgcolor=\"#DDDDFF\").text))\n",
+    "            \n",
+    "    except:\n",
+    "        print(f\"No data for {month:0>2}/{year}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f532dd00",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No data for 01/2015\n",
+      "No data for 02/2015\n",
+      "No data for 03/2015\n",
+      "No data for 03/2021\n"
+     ]
+    }
+   ],
+   "source": [
+    "year_min = 2015\n",
+    "year_max = 2024\n",
+    "\n",
+    "dates = []\n",
+    "temperature_max = []\n",
+    "temperature_min = []\n",
+    "\n",
+    "for year in range(year_min, year_max+1):\n",
+    "    for month in range(1, 13):\n",
+    "        scrapeMonthYear(month, year, dates, temperature_max, temperature_min)\n",
+    "\n",
+    "df_weather = pd.DataFrame({\n",
+    "                    \"date\": dates,\n",
+    "                    \"temperature max\" : temperature_max,\n",
+    "                    \"temperature min\": temperature_min\n",
+    "        })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "bb124b8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Save dataframe\n",
+    "df_weather.to_csv(f\"../data/temperature_{year_min}_{year_max}.csv\", index=False)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -94,37 +156,73 @@
    "id": "3e20b2ee",
    "metadata": {},
    "source": [
-    "## Extract\n",
+    "## Extract and transform\n",
     "From API [https://opendata.paris.fr/explore/dataset/comptage-velo-donnees-compteurs/](https://opendata.paris.fr/explore/dataset/comptage-velo-donnees-compteurs/api/?disjunctive.id_compteur&disjunctive.nom_compteur&disjunctive.id&disjunctive.name)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "eb10ed29",
+   "execution_count": 6,
+   "id": "4027d680",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d06ead95",
-   "metadata": {},
    "source": [
-    "## Transform"
+    "url=\"https://opendata.paris.fr/api/explore/v2.1/catalog/datasets/comptage-velo-donnees-compteurs/records\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e7e2a043",
+   "execution_count": 7,
+   "id": "eb10ed29",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def updateCyclistData(url, data, offset):\n",
+    "    params = {\n",
+    "    \"select\": [\"sum_counts\", \"date\"],\n",
+    "    \"limit\": 100,\n",
+    "    \"offset\": offset,\n",
+    "    \"refine\": ['nom_compteur:36 quai de Grenelle NE-SO']\n",
+    "    }\n",
+    "\n",
+    "    response = json.loads(requests.get(url, params=params).content)\n",
+    "\n",
+    "    data[\"date\"] = data[\"date\"] + [dic[\"date\"] for dic in response[\"results\"]]\n",
+    "    data[\"sum_count\"] = data[\"sum_count\"] + [dic[\"sum_counts\"] for dic in response[\"results\"]]\n",
+    "\n",
+    "def getTotalCount(url):\n",
+    "    params = {\n",
+    "    \"select\": [\"sum_counts\", \"date\"],\n",
+    "    \"limit\": 0,\n",
+    "    \"offset\": 0,\n",
+    "    \"refine\": ['nom_compteur:36 quai de Grenelle NE-SO']\n",
+    "    }\n",
+    "\n",
+    "    response = json.loads(requests.get(url, params=params).content)\n",
+    "\n",
+    "    return response[\"total_count\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "626c763f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = {\n",
+    "    \"date\": [],\n",
+    "    \"sum_count\": [],\n",
+    "}\n",
+    "offset=0\n",
+    "while offset <= getTotalCount(url):\n",
+    "    updateCyclistData(url, data, offset)\n",
+    "    offset += 100"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "75e9b4e4",
+   "id": "5e307856",
    "metadata": {},
    "source": [
     "## Load"
@@ -132,21 +230,244 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "98f34b8f",
+   "execution_count": 9,
+   "id": "4abb6ab9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# E T L Vélo"
+    "df_bike = pd.DataFrame(data)\n",
+    "df_bike[\"date\"] = pd.to_datetime(df_bike[\"date\"])\n",
+    "df_bike = df_bike.set_index(\"date\")\n",
+    "df_bike_1d = df_bike.resample(\"1d\").sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fb45d93a",
+   "execution_count": 10,
+   "id": "1c8b63f5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_bike_1d.to_csv(f\"../data/cyclist.csv\", index=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75e9b4e4",
+   "metadata": {},
+   "source": [
+    "# SQL Lite"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95fdedd4",
+   "metadata": {},
+   "source": [
+    "## Load and merge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "98f34b8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temperature = pd.read_csv(\"../data/temperature_2015_2024.csv\")\n",
+    "cyclist = pd.read_csv(\"../data/cyclist.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "2c5b56be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cyclist[\"date\"] = pd.to_datetime(pd.to_datetime(cyclist[\"date\"]).dt.date)\n",
+    "cyclist = cyclist.set_index(\"date\")\n",
+    "\n",
+    "temperature[\"date\"] = pd.to_datetime(temperature[\"date\"], format=r'%d-%m-%Y')\n",
+    "temperature = temperature.set_index(\"date\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "0c260ba2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = cyclist.merge(\n",
+    "    temperature,\n",
+    "    how='inner',\n",
+    "    left_index=True,\n",
+    "    right_index=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "55d20d34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.rename(columns={\n",
+    "    \"sum_count\":\"nombre de cycliste par jour\",\n",
+    "    \"temperature max\": \"temperature_max\",\n",
+    "    \"temperature min\": \"temperature_min\",\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "6902cc51",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['nombre de cycliste par jour', 'temperature_max', 'temperature_min'], dtype='object')"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed03de5c",
+   "metadata": {},
+   "source": [
+    "## Database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "c1d12f9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = sqlite3.connect('paris_cyclist_temperature.db')\n",
+    "df.to_sql('counters', conn, index=True, if_exists='replace')\n",
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b407290",
+   "metadata": {},
+   "source": [
+    "# Check the db"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "d5a25896",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>nombre de cycliste par jour</th>\n",
+       "      <th>temperature_max</th>\n",
+       "      <th>temperature_min</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2024-11-01 00:00:00</td>\n",
+       "      <td>1389</td>\n",
+       "      <td>10.3</td>\n",
+       "      <td>7.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2024-11-04 00:00:00</td>\n",
+       "      <td>2947</td>\n",
+       "      <td>12.7</td>\n",
+       "      <td>6.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2024-11-05 00:00:00</td>\n",
+       "      <td>3125</td>\n",
+       "      <td>11.7</td>\n",
+       "      <td>6.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2024-11-09 00:00:00</td>\n",
+       "      <td>1822</td>\n",
+       "      <td>10.5</td>\n",
+       "      <td>7.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2024-11-11 00:00:00</td>\n",
+       "      <td>1558</td>\n",
+       "      <td>10.7</td>\n",
+       "      <td>6.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  date  nombre de cycliste par jour  temperature_max  \\\n",
+       "0  2024-11-01 00:00:00                         1389             10.3   \n",
+       "1  2024-11-04 00:00:00                         2947             12.7   \n",
+       "2  2024-11-05 00:00:00                         3125             11.7   \n",
+       "3  2024-11-09 00:00:00                         1822             10.5   \n",
+       "4  2024-11-11 00:00:00                         1558             10.7   \n",
+       "\n",
+       "   temperature_min  \n",
+       "0              7.1  \n",
+       "1              6.6  \n",
+       "2              6.4  \n",
+       "3              7.5  \n",
+       "4              6.5  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "conn = sqlite3.connect('paris_cyclist_temperature.db') \n",
+    "display(pd.read_sql_query(\"SELECT * FROM counters WHERE temperature_max>10 LIMIT 5\", conn))\n",
+    "conn.close()"
+   ]
   }
  ],
  "metadata": {
