--- a/notebooks/2-ETL cyclisme Paris.ipynb
+++ b/notebooks/2-ETL cyclisme Paris.ipynb
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "id": "eb10ed29",
    "metadata": {},
    "outputs": [],
@@ -185,7 +185,7 @@
     "    \"refine\": ['nom_compteur:36 quai de Grenelle NE-SO']\n",
     "    }\n",
     "\n",
-    "    response = json.loads(requests.get(url, params=params).content)\n",
+    "    response = requests.get(url, params=params).json()\n",
     "\n",
     "    data[\"date\"] = data[\"date\"] + [dic[\"date\"] for dic in response[\"results\"]]\n",
     "    data[\"sum_count\"] = data[\"sum_count\"] + [dic[\"sum_counts\"] for dic in response[\"results\"]]\n",
@@ -198,14 +198,14 @@
     "    \"refine\": ['nom_compteur:36 quai de Grenelle NE-SO']\n",
     "    }\n",
     "\n",
-    "    response = json.loads(requests.get(url, params=params).content)\n",
+    "    response = requests.get(url, params=params).json()\n",
     "\n",
     "    return response[\"total_count\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "626c763f",
    "metadata": {},
    "outputs": [],
@@ -218,6 +218,36 @@
     "while offset <= getTotalCount(url):\n",
     "    updateCyclistData(url, data, offset)\n",
     "    offset += 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "d4064bec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9919"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "params = {\n",
+    "    \"select\": [\"sum_counts\", \"date\"],\n",
+    "    \"limit\": 0,\n",
+    "    \"offset\": 0,\n",
+    "    \"refine\": ['nom_compteur:36 quai de Grenelle NE-SO']\n",
+    "    }\n",
+    "\n",
+    "response = requests.get(url, params=params).json()\n",
+    "\n",
+    "response[\"total_count\"]"
    ]
   },
   {
